--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "gatsby": "^5.14.1",
     "gatsby-plugin-feed": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
@@ -33,10 +34,12 @@
     "gatsby-transformer-sharp": "^5.14.0",
     "postcss": "^8.5.3",
     "prismjs": "^1.30.0",
+    "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-social-icons": "^6.24.0"
+    "react-social-icons": "^6.24.0",
+    "react-use-flexsearch": "^0.1.1"
   },
   "packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9"
 }
