--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-remark": "^6.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.3",
     "prismjs": "^1.30.0",
     "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-leaflet": "^5.0.0",
     "react-social-icons": "^6.24.0",
     "react-use-flexsearch": "^0.1.1"
   },
