--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-leaflet": "^5.0.0",
+    "react-p5": "^1.4.1",
     "react-social-icons": "^6.24.0",
     "react-use-flexsearch": "^0.1.1"
   },
