--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@reach/router": "^1.3.4",
     "d3": "^7.9.0",
     "gatsby": "^5.14.1",
@@ -34,6 +35,8 @@
     "gatsby-transformer-remark": "^6.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "leaflet": "^1.9.4",
+    "lottie-react": "^2.4.1",
+    "lottie-web": "^5.12.2",
     "postcss": "^8.5.3",
     "prismjs": "^1.30.0",
     "query-string": "^9.1.1",
