--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "d3": "^7.9.0",
     "gatsby": "^5.14.1",
     "gatsby-plugin-feed": "^5.14.0",
+    "gatsby-plugin-google-gtag": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-local-search": "^2.0.1",
     "gatsby-plugin-manifest": "^5.14.0",
